Réorganisation de l'architecture du site !

--- a/article/source.html
+++ b/article/source.html
@@ -13,7 +13,7 @@
         <label class="logo">Menu : </label>
         <ul>
 
-        <li><a  href="../PageAccueil.html">Page d'accueil</a></li>
+        <li><a  href="../index.php">Page d'accueil</a></li>
         <li><a  href="1er.html">Comment choisir son PC ?</a></li>
 		<li><a  href="2nd.html">Hébergement de site internet</a></li>
 		<li><a  href="../contenu/pagetestlien.html">Page de commentaires</a></li>
