--- a/article/2nd.html
+++ b/article/2nd.html
@@ -10,7 +10,7 @@
 	<nav>
 		<label class="logo">Menu : </label>
 		<ul>
-			<li><a  href="../PageAccueil.html">Page d'accueil</a></li>
+			<li><a  href="../index.php">Page d'accueil</a></li>
 			<li><a  href="1er.html">Comment choisir son PC ?</a></li>
 			<li><a  href="../contenu/pagetestlien.html">Page de commentaires</a></li>
 			<li><a  href="../article/source.html">Sources</a></li>
