--- a/article/1er.html
+++ b/article/1er.html
@@ -10,7 +10,7 @@
 	<nav>
 		<label class="logo"> Menu : </label> <!-- A Expliquer -->
 		<ul>
-			<li><a  href="../index.php">Page d'accueil</a></li>
+			<li><a  href="../index.html">Page d'accueil</a></li>
 			<li><a  href="2nd.html">Hébergement de site internet</a></li>
 			<li><a  href="../contenu/pagetestlien.html">Page de commentaires</a></li>
 			<li><a  href="../article/source.html">Sources</a></li>
