--- a/contenu/pagetestlien.html
+++ b/contenu/pagetestlien.html
@@ -13,7 +13,7 @@
 	<nav>
 		<label class="logo">Menu : </label>
 		<ul>
-			<li><a  href="../index.php">Page d'accueil</a></li>
+			<li><a  href="../index.html">Page d'accueil</a></li>
 			<li><a  href="../article/1er.html">Comment choisir son PC ?</a></li>
 			<li><a  href="../article/2nd.html">Hébergement de site internet</a></li>
 			<li><a  href="../article/source.html">Sources</a></li>
